# genixx

./: .gitignore  CMakeLists.txt  CMakePresets.json  Chromosome_8h.html  Chromosome_8h.js  Chromosome_8h__dep__incl.dot  Chromosome_8h__dep__incl.map  Chromosome_8h__dep__incl.md5  Chromosome_8h__incl.dot  Chromosome_8h__incl.map  Chromosome_8h__incl.md5  Chromosome_8h_source.html  Genetyczny _v_1.0.txt  Individual_8cpp.html  Individual_8cpp__incl.dot  Individual_8cpp__incl.map  Individual_8cpp__incl.md5  Individual_8h.html  Individual_8h__dep__incl.dot  Individual_8h__dep__incl.map  Individual_8h__dep__incl.md5  Individual_8h__incl.dot  Individual_8h__incl.map  Individual_8h__incl.md5  Individual_8h_source.html  NumericChromosome_8h.html  NumericChromosome_8h.js  NumericChromosome_8h__incl.map  NumericChromosome_8h__incl.md5  NumericChromosome_8h_source.html  Population_8cpp.html  Population_8cpp__incl.dot  Population_8cpp__incl.map  Population_8cpp__incl.md5  Population_8h.html  Population_8h.js  Population_8h__dep__incl.dot  Population_8h__dep__incl.map  Population_8h__dep__incl.md5  Population_8h__incl.dot  (+245 more)
.devcontainer/: devcontainer.json
.github/: genixx.dockerfile
.github/workflows/: build_app.yml  build_example.yml  deployment.yml  genixx_ci.yml  quality.yml  run_app.yml  run_example.yml  valgrind.yml
app/: CMakeLists.txt  Population.cpp  Population.h  dump.cpp  dump.h  main.cpp  parameters.cpp  parameters.h  tools.h
app/first_stage/: CMakeLists.txt  Chromosome.cpp  Chromosome.h  main.cpp
cmake/: doxygen.cmake  rapidjson.cmake  sanitizers.cmake
example/two-variables/: CMakeLists.txt  Chromosome.cpp  Chromosome.h  main.cpp
genixx-doxygen/: CMakeCache.txt  Doxyfile.doxygen  Makefile  cmake_install.cmake  compile_commands.json
lib/: CMakeLists.txt  rethreadme.cmake
lib/population/: CMakeLists.txt  Individual.cpp  Population.cpp
lib/population/include/genixx/population/: Individual.h  Population.h
lib/population/include/genixx/population/selection/: method.h
lib/population/include/population/: Individual.h  Population.h
lib/population/include/population/selection/: method.h
lib/utils/: CMakeLists.txt
lib/utils/include/genixx/utils/: random.h
lib/utils/include/utils/: random.h
search/: all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  pages_0.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
test/individual/: CMakeLists.txt  test.cpp
tools/: chart_plotter.py
(+159 files in other folders)
